--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Deploy HTML to GitHub Pages
 on:
   push:
     branches:
-      - main  
+      - main  # Quando um push é feito na branch 'main'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,10 +15,21 @@ jobs:
       - name: Configurar Git
         run: git config --global user.name "matheusthimoty" && git config --global user.email "matheusthimoty@outlook.com"
 
-      - name: Deploy para GitHub Pages
+      - name: Instalar dependências
+        run: npm install  
+
+      - name: Build do projeto
+        run: echo "Este passo pode ser removido caso não tenha processo de build, pois seu projeto é puro HTML"
+
+      - name: Configurar branch gh-pages
         run: |
+          git remote set-url origin https://github.com/matheusthimoty/seu-repositorio.git
+          git fetch
+          git checkout --orphan gh-pages  # Cria uma nova branch sem histórico de commit
+
+      - name: Copiar arquivos para a branch gh-pages
+        run: |
+          cp -r * .  # Copia todos os arquivos da branch main para a nova branch gh-pages
           git add .
-          git commit -m "Deploy automático"
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git commit -m "Deploy para GitHub Pages"
+          git push origin gh-pages --force  # Push da nova branch gh-pages
